# nvidia-nvimgcodec-stubs

./: LICENSE  README.md  build.sh  pyproject.toml
src/nvidia-nvimgcodec-cu12-stubs/: __init__.py
src/nvidia/nvcomp/: __init__.pyi  nvcomp_impl.pyi
src/nvidia/nvimgcodec/: __init__.pyi  nvimgcodec_impl.pyi
template/: README.md  pyproject.toml
template/nvidia-nvimgcodec-cu11-stubs/: __init__.py
tests/: test_stubs.py
