
[project]
name = "PROJECT_NAME"
version = "0.0.0.0"
description = "Type stubs for NVIDIA NVIMGCODEC CUDA 12 bindings"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    { name = "minamik", email = "mia@sync.dev" }
]
requires-python = ">=3.10"

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Stubs Only",
]
dependencies = [
    "TARGET_NAME==0.0.0.0",
]

[project.optional-dependencies]
dev = [
    "black>=23.7.0",
    "flake8>=6.1.0",
    "pybind11-stubgen>=2.5.4",
    "pytest>=8.3.5",
    "twine>=6.1.0",
]

[project.urls]
"Homepage" = "https://github.com/sync-dev-org/nvidia-nvimgcodec-stubs"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = [
    "src/**/*.py",
    "src/**/*.pyi",
    "src/**/py.typed",
]

[tool.hatch.build.targets.wheel]
packages = [
    "src/nvidia",
    "src/PROJECT_NAME"
]

[tool.hatch.metadata]
allow-direct-references = true
